#229: Bugfix: Remove horizontal scroll from add/edit material dialog in MS Edge

--- a/front-end/app/styles/dialogs/add-material.scss
+++ b/front-end/app/styles/dialogs/add-material.scss
@@ -39,8 +39,12 @@
   padding-right: 50px;
 }
 
-.datepicker-container .validation-messages{
-  max-width: 180px;
+.datepicker-container {
+  overflow: hidden;
+
+  .validation-messages{
+    max-width: 180px;
+  }
 }
 
 .datepicker-error{
